# dapp-playground

./: .gitignore  Account-A.pk  Account-B.pk  Account-C.pk  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
average-salary-client/: .gitlab-ci.yml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
average-salary-client/src/main/: AppState.ts  ConnectedWallet.ts  Main.ts  WalletIntegration.ts  index.html
average-salary-client/src/main/client/: AccountData.ts  ContractData.ts  PbcClient.ts  TransactionApi.ts
average-salary-client/src/main/contract/: Addresses.ts  AverageSalary.ts  AverageSalaryApi.ts  AverageSalaryGenerated.ts
average-salary-frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
average-salary-frontend/src/main/: AppState.ts  ConnectedWallet.ts  Main.ts  WalletIntegration.ts  index.html
average-salary-frontend/src/main/client/: AccountData.ts  BufferWriter.ts  ContractData.ts  CryptoUtils.ts  PbcClient.ts  ShardedClient.ts  TransactionApi.ts  TransactionData.ts
average-salary-frontend/src/main/contract/: AverageSalaryApi.ts  AverageSalaryGenerated.ts
average-salary-frontend/src/main/shared/: ConnectedWallet.ts  MetaMaskSignatureProvider.ts  MpcWalletSignatureProvider.ts
example-web-client/: package-lock.json  package.json
example-web-client/src/main/: AppState.ts  Main.ts  WalletIntegration.ts  index.html
example-web-client/src/main/contract/: Addresses.ts  TokenContractApi.ts
petition/: Cargo.toml  README.md
petition-client/: .eslintrc.json  package-lock.json  package.json
petition-client/src/main/: AppState.ts  Main.ts  WalletIntegration.ts  index.html
petition-client/src/main/client/: BaseClient.ts
petition-client/src/main/contract/: Petition.ts  PetitionApi.ts  PetitionGenerated.ts
petition-frontend/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
petition-frontend/src/main/: AppState.ts  Main.ts  WalletIntegration.ts  index.html
petition-frontend/src/main/client/: BaseClient.ts  BufferWriter.ts  CryptoUtils.ts  TransactionData.ts  TransactionSerialization.ts
petition-frontend/src/main/contract/: PetitionApi.ts  PetitionGenerated.ts
petition-frontend/src/main/shared/: ConnectedWallet.ts  MetaMaskSignatureProvider.ts  MpcWalletSignatureProvider.ts  PrivateKeySignatureProvider.ts
petition/src/: lib.rs
scripts/: ide.pk  key-gen.sh
tutorial/: Change-the-contract.md  Deploy-your-first-contract.md  Interact-with-your-first-contract.md  The-power-of-zk.md  average-salary-example-application.md  petition-example-application.md  public-contract-example.md  zk-contract-example.md
zk-average-salary/: Cargo.toml  README.md
zk-average-salary/src/: contract.rs  zk_compute.rs  zk_test.rs
