[workspace]
resolver = "2"

members = [
    "petition",
    "zk-average-salary",
]

[workspace.package]
version = "4.0.0"
description = "Example contract for the Partisia Blockchain."
homepage = "https://gitlab.com/secata/pbc/language/web-ide"
repository = "https://gitlab.com/secata/pbc/language/web-ide"
documentation = "https://gitlab.com/secata/pbc/language/web-ide"
edition = "2021"
license = "UNLICENSED"

[workspace.metadata.zkcompiler]
url = "https://nexus.secata.com/repository/mvn/com/partisia/blockchain/language/zkcompiler/4.46.0/zkcompiler-4.46.0-jar-with-dependencies.jar"

[workspace.dependencies]
pbc_contract_common = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
pbc_contract_codegen = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
pbc_traits = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
pbc_lib = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
read_write_rpc_derive = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
read_write_state_derive = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
create_type_spec_derive = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
pbc_zk = { git = "ssh://git@gitlab.com/secata/pbc/language/contract-sdk.git", tag = "v.16.18.0" }
